Removing vestiges of gmail permissions

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -17,7 +17,7 @@
     },
 
     "content_scripts": [ {
-	"matches": ["*://docs.google.com/*", "*://*.mozilla.org/*", "*://mail.google.com/*"],
+	"matches": ["*://docs.google.com/*"],
 	"js": ["3rdparty/sha256.js", "writing_common.js", "writing.js"]
     }],
     "background": {
