--- a/webapp/creds.yaml.example
+++ b/webapp/creds.yaml.example
@@ -17,3 +17,5 @@ google-oauth:
     auth_provider_x509_cert_url: https://www.googleapis.com/oauth2/v1/certs,
     client_secret: {google-client-secret},
     javascript_origins: ["{url}"]
+pubsub:
+  type: stub  # stub for in-memory debugging, redis for small-scale prod. xmpp will bring scale
