--- a/webapp/creds.yaml.example
+++ b/webapp/creds.yaml.example
@@ -10,12 +10,12 @@ xmpp:
     password: {xmpp-stream-password}
 google-oauth:
   web:
-    client_id: {google-oauth-client-id},
-    project_id: {google-oauth-project-id},
-    auth_uri: https://accounts.google.com/o/oauth2/auth,
-    token_uri: https://oauth2.googleapis.com/token,
-    auth_provider_x509_cert_url: https://www.googleapis.com/oauth2/v1/certs,
-    client_secret: {google-client-secret},
+    client_id: {google-oauth-client-id}
+    project_id: {google-oauth-project-id}
+    auth_uri: https://accounts.google.com/o/oauth2/auth
+    token_uri: https://oauth2.googleapis.com/token
+    auth_provider_x509_cert_url: https://www.googleapis.com/oauth2/v1/certs
+    client_secret: {google-client-secret}
     javascript_origins: ["{url}"]
 pubsub:
     type: stub  # stub for in-memory debugging, redis for small-scale prod. xmpp will bring scale
