--- a/webapp/creds.yaml.example
+++ b/webapp/creds.yaml.example
@@ -1,3 +1,8 @@
+# We use curly-braces for things which ought to be filled in like passwords and secret keys:
+#
+# 1) These are friendly to templating languages and Python's str.format()
+# 2) These generate dictionaries, and we can throw an exception if unset. If we forget to
+#    throw an exception, these won't give a valid string
 xmpp:
   sink: # Receives messages. We'll need many of these.
     jid: sink@localhost
@@ -32,3 +37,6 @@ kvs:
     expiry: 60
 roster-data:
    source: google-api  # Can be set to google-api or synthetic
+aio:
+    session_secret: {unique-aio-session-key}  # This should be a unique secret key for YOUR deployment
+    session_max_age: 3600  # In seconds. This may be short for dev (e.g. <5 mins) and long for deploy (or set to null, for lifetime of the browser)
