--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,6 @@ pathvalidate
 names
 git+https://github.com/testlabauto/loremipsum.git@b7bd71a6651207ef88993045cd755f20747f2a1e#egg=loremipsum
 git+https://github.com/pmitros/tsvx.git@09bf7f33107f66413d929075a8b54c36ca581dae#egg=tsvx
+sphinx
+psutil
+-e gitserve
