More code cleanups

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,30 @@
-pandas
-ipython
+-e gitserve
+aiodns
 aiofiles
-asyncpg
-pyyaml
 aiohttp
 aiohttp_cors
 aiohttp_session
+asyncio_redis
+asyncpg
 cryptography
 cython
-numpy
-scipy
-pyasn1
-aiodns
-lxml
-pep8
-pylint
-pycodestyle
-google-auth
-redis
-asyncio_redis
 docopt
-pathvalidate
-names
-git+https://github.com/testlabauto/loremipsum.git@b7bd71a6651207ef88993045cd755f20747f2a1e#egg=loremipsum
 git+https://github.com/pmitros/tsvx.git@09bf7f33107f66413d929075a8b54c36ca581dae#egg=tsvx
-sphinx
+git+https://github.com/testlabauto/loremipsum.git@b7bd71a6651207ef88993045cd755f20747f2a1e#egg=loremipsum
+google-auth
+ipython
+lxml
+names
+numpy
+pandas
+pathvalidate
+pep8
 psutil
--e gitserve
+pyasn1
+pycodestyle
+pylint
+pyyaml
+redis
+scipy
+slixmpp
+sphinx
