--- a/learning_observer/learning_observer/creds.yaml.example
+++ b/learning_observer/learning_observer/creds.yaml.example
@@ -46,7 +46,7 @@ kvs:
     # * 6-24 hours for development
     expiry: 60
 roster-data:
-    source: filesystem  # Can be set to google-api, test, or filesystem
+    source: filesystem  # Can be set to google-api, all, test, or filesystem
 aio:
     session_secret: {unique-aio-session-key}  # This should be a unique secret key for YOUR deployment
     session_max_age: 3600  # In seconds. This may be short for dev (e.g. <5 mins) and long for deploy (or set to null, for lifetime of the browser)
