Minor code cleanup: Manifest, comments, formatting, order of functions
* We reordered code in the extension, and labeled code blocks
* We added or clarified comments
* We removed obsolete permissions from manifest.json (gmail), and added
  permissions we will need
* Tabs to spaces in JavaScript
* Extra spaces at the ends of lines

There should be no functional changes

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -17,7 +17,7 @@
     },
 
     "content_scripts": [ {
-	"matches": ["*://docs.google.com/*"],
+        "matches": ["*://docs.google.com/*"],
 	"js": ["3rdparty/sha256.js", "writing_common.js", "writing.js"]
     }],
     "background": {
@@ -28,10 +28,12 @@
 	"identity",
 	"identity.email",
 	"*://docs.google.com/*",
-	"*://mail.google.com/*",
-	"clipboardRead",
-	"storage"
-    ],
+        "clipboardRead",
+        "storage",
+        "activeTab",
+        "tabs",
+        "declarativeContent"
+   ],
     "icons": {
 	"48": "icons/lousy-fountain-pen-48.png"
     },
