--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ asyncpg
 cryptography
 cython
 docopt
+filetype
 git+https://github.com/pmitros/tsvx.git@09bf7f33107f66413d929075a8b54c36ca581dae#egg=tsvx
 git+https://github.com/testlabauto/loremipsum.git@b7bd71a6651207ef88993045cd755f20747f2a1e#egg=loremipsum
 google-auth
