Clean ups for submission of extension for Google review

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -28,11 +28,7 @@
 	"identity",
 	"identity.email",
 	"*://docs.google.com/*",
-        "clipboardRead",
-        "storage",
-        "activeTab",
-        "tabs",
-        "declarativeContent"
+        "storage"
    ],
     "icons": {
 	"48": "icons/lousy-fountain-pen-48.png"
