--- a/learning_observer/learning_observer/creds.yaml.example
+++ b/learning_observer/learning_observer/creds.yaml.example
@@ -48,9 +48,9 @@ kvs:
     expiry: 60
 roster-data:
     source: filesystem  # Can be set to google-api, all, test, or filesystem
-aio:
+aio:  # User session; used for log-ins.
     session_secret: {unique-aio-session-key}  # This should be a unique secret key for YOUR deployment
-    session_max_age: 3600  # In seconds. This may be short for dev (e.g. <5 mins) and long for deploy (or set to null, for lifetime of the browser)
+    session_max_age: 3600  # In seconds. This may be short for auth dev (e.g. <5 mins), intermediate for deploy (a few hours?), and long for e.g. testing other parts of the system (or set to null, for lifetime of the browser)
 config:
     run_mode: dev   # "dev" versus "deploy". E.g. Do we crash on errors? Or log them and keep going?
     debug: []  # add "tracemalloc" to the list to enable memory leak debugging
