Per-document now works. Note that front-end has /not/ been updated....

--- a/learning_observer/learning_observer/creds.yaml.example
+++ b/learning_observer/learning_observer/creds.yaml.example
@@ -63,3 +63,4 @@ event_auth:
     local_storage:
         userfile: students.yaml
         allow_guest: true
+feature_flags: {}  # For enabling / disabling features in development
