We can pick a port to run on in the config file; useful for running multiple instances

--- a/learning_observer/learning_observer/creds.yaml.example
+++ b/learning_observer/learning_observer/creds.yaml.example
@@ -64,3 +64,5 @@ event_auth:
         userfile: students.yaml
         allow_guest: true
 feature_flags: {}  # For enabling / disabling features in development
+server:
+    port: 8888     # Optional. Pick a different port.
