Working on kafka stuff

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ learning_observer/learning_observer/static_data/courses.json
 learning_observer/learning_observer/static_data/students.json
 learning_observer/passwd.lo
 --*
+.venv/
