--- a/learning_observer/learning_observer/creds.yaml.example
+++ b/learning_observer/learning_observer/creds.yaml.example
@@ -79,6 +79,9 @@ event_auth:
         userfile: students.yaml
         allow_guest: true
 feature_flags: {}  # For enabling / disabling features in development. Useful
-                   # ones include google_routes for debugging Google APIs
+                   # ones include:
+                   # * google_routes (for debugging / developing Google APIs)
+                   # * save_google_ajax (for saving Google API calls -- NOT FOR PROD)
+                   # * use_google_ajax (for using saved Google API calls -- AGAIN, NOT FOR PROD)
 server:
     port: 8888     # Optional. Pick a different port.
