--- a/extension/extension/manifest.json
+++ b/extension/extension/manifest.json
@@ -15,10 +15,10 @@
         }
     },
     "content_scripts": [{
-        "matches": ["*://docs.google.com/*"],
+        "matches": ["*://docs.google.com/document/*"],
 	    "js": ["3rdparty/sha256.js", "writing_common.js", "writing.js"]
     }],
-    "web_accessible_resources": [{ 
+    "web_accessible_resources": [{
         "resources": ["inject.js"],
         "matches": ["*://docs.google.com/*"],
         "use_dynamic_url": true
@@ -37,7 +37,7 @@
         "activeTab"
     ],
     "host_permissions": [
-        "*://docs.google.com/*"
+        "*://docs.google.com/document/*"
     ],
     "icons": {
 	    "48": "icons/lousy-fountain-pen-48.png"
