--- a/modules/lo_dash_react_components/package.json
+++ b/modules/lo_dash_react_components/package.json
@@ -20,7 +20,9 @@
     "build:backends": "dash-generate-components ./src/lib/components lo_dash_react_components -p package-info.json --r-prefix '' --jl-prefix '' --ignore \\.test\\.",
     "build:backends-activated": "(. venv/bin/activate || venv\\scripts\\activate && npm run build:py_and_r)",
     "build": "npm run build:js && npm run build:backends",
-    "build:activated": "npm run build:js && npm run build:backends-activated"
+    "build:activated": "npm run build:js && npm run build:backends-activated",
+    "build-css": "node-sass src/styles.scss -o src/css",
+    "watch-css": "node-sass src/styles.scss -o src/css --watch"
   },
   "author": "Piotr Mitros <pmitros@ets.org>",
   "license": "AGPL-3.0",
@@ -29,6 +31,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "node-sass": "^7.0.3",
     "ramda": "^0.26.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
