Nodemon support added

--- a/modules/lo_dash_react_components/package.json
+++ b/modules/lo_dash_react_components/package.json
@@ -13,7 +13,11 @@
   "main": "build/index.js",
   "scripts": {
     "webpack-start": "webpack-serve --config ./webpack.serve.config.js --open",
+    "describe-webpack-start": "echo Run react app (without dash) with WebPack, which is Dash's default.",
     "react-start": "react-scripts start",
+    "describe-react-start": "echo Run react app (without dash) with React Scripts, which probably gives the most rapid workflow.",
+    "dash-start": "nodemon",
+    "describe-dash-start": "echo Run full dash app with nodemon. This requires a rebuild each time files change.",
     "validate-init": "python _validate_init.py",
     "prepublishOnly": "npm run validate-init",
     "build:js": "webpack --mode production",
@@ -32,6 +36,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "node-sass": "^7.0.3",
+    "nodemon": "^2.0.21",
     "ramda": "^0.26.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
