--- a/modules/lo_dash_react_components/.gitignore
+++ b/modules/lo_dash_react_components/.gitignore
@@ -286,6 +286,7 @@ R/
 deps/
 man/
 lo_dash_react_components/LoConnection.py
+lo_dash_react_components/*.map
 lo_dash_react_components/_imports_.py
 lo_dash_react_components/lo_dash_react_components.min.js
 lo_dash_react_components/lo_dash_react_components.min.js.map
