--- a/modules/lo_dash_react_components/package.json
+++ b/modules/lo_dash_react_components/package.json
@@ -26,7 +26,8 @@
     "build": "npm run build:js && npm run build:backends",
     "build:activated": "npm run build:js && npm run build:backends-activated",
     "build-css": "node-sass src/styles.scss -o src/css",
-    "watch-css": "node-sass src/styles.scss -o src/css --watch"
+    "watch-css": "node-sass src/styles.scss -o src/css --watch",
+    "start": "npm-run-all --parallel watch-css react-start"
   },
   "author": "Piotr Mitros <pmitros@ets.org>",
   "license": "AGPL-3.0",
@@ -59,6 +60,7 @@
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-react": "^7.14.2",
+    "npm-run-all": "^4.1.5",
     "prop-types": "^15.7.2",
     "react-docgen": "^4.1.1",
     "style-loader": "^0.23.1",
