--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -18,6 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install modules/writing_observer/
     - name: Unit testing with pytest
       run: |
         pytest modules/wo_highlight_dashboard/
