Updates to wo_highlight_dashboard testing suite plus minor css change

--- a/modules/wo_highlight_dashboard/setup.cfg
+++ b/modules/wo_highlight_dashboard/setup.cfg
@@ -6,7 +6,11 @@ version = 0.1
 
 [options]
 packages = wo_highlight_dashboard
+include_package_data = true
 
 [options.entry_points]
 lo_modules =
    lo_core = wo_highlight_dashboard.module
+
+[options.package_data]
+wo_highlight_dashboard = dashboard/*
