--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -17,8 +17,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install --default-timeout=1000 -r requirements.txt
         pip install modules/writing_observer/
+        pip install modules/lo_dash_react_components/
         pip install modules/wo_highlight_dashboard/
     - name: Unit testing with pytest
       run: |
