--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,9 +1,6 @@
 name: Pytest
 
-on:
-  push:
-    branches:
-    - pytest-debugging
+on: [push]
 
 jobs:
   build:
@@ -22,7 +19,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '16.x'
-    - name: Install dependencies
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install --default-timeout=1000 -r requirements.txt
