--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -9,12 +9,17 @@ jobs:
       matrix:
         python-version: ["3.9", "3.10"]
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16.x'
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install --default-timeout=1000 -r requirements.txt
