--- a/learning_observer/learning_observer/creds.yaml.example
+++ b/learning_observer/learning_observer/creds.yaml.example
@@ -3,7 +3,8 @@
 # 1) These are friendly to templating languages and Python's str.format()
 # 2) These generate dictionaries, and we can throw an exception if unset. If we forget to
 #    throw an exception, these won't give a valid string
-hostname: learning-observer.org
+hostname: localhost:8888
+protocol: http
 xmpp:
   sink: # Receives messages. We'll need many of these.
     jid: sink@localhost
@@ -51,7 +52,7 @@ kvs:
     # * 6-24 hours for development
     expiry: 60
 roster_data:
-    source: filesystem  # Can be set to google-api, all, test, or filesystem
+    source: filesystem  # Can be set to google_api, all, test, or filesystem
 aio:  # User session; used for log-ins.
     session_secret: {unique-aio-session-key}  # This should be a unique secret key for YOUR deployment
     session_max_age: 3600  # In seconds. This may be short for auth dev (e.g. <5 mins), intermediate for deploy (a few hours?), and long for e.g. testing other parts of the system (or set to null, for lifetime of the browser)
